--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -33,8 +33,6 @@ a{
   text-decoration: none;
   cursor: pointer;
   color: #555;
-  font-weight: 500;
-  text-transform: capitalize;
 }
 
 /******************************/
@@ -48,16 +46,65 @@ a{
 .grid{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  align-self: center;
-  justify-self: center;
+  align-items: center;
+  justify-items: center;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+  font-weight: 700;
+  color: #555;
+  /* color: #45260a; */
+  /* color: #343a40; */
+  letter-spacing: -0.5px;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+}
+
+.heading-tertiary {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
 }
 
 /**************/
 /* HEADER/NAV */
 /**************/
 
-.header{
+header{
+  background-color: #344775;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.281);
+}
+
+.header-div{
   display: flex;
+  align-items: center;
+  justify-content:space-between;
+  padding: 1rem 0;
+  max-width: 75vw;
+  margin: auto;
+}
+
+.logo{
+  width: 5vw
 }
 
 .nav-list{
@@ -69,4 +116,114 @@ a{
   list-style: none;
   padding: 1rem;
   margin: auto;
+}
+
+.nav-link{
+  color: whitesmoke;
+}
+
+.instagram-logo{
+  color: whitesmoke;
+}
+
+/*************/
+/* CARROSSEL */
+/*************/
+
+.carrossel{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 0;
+}
+
+.carrossel img{
+  width: 80vw;
+  opacity: 0.9;
+  border-radius: 2px;
+}
+
+/*****************/
+/* MESTRE-ESPIGA */
+/*****************/
+
+.mestre-espiga{
+  background-color: #bebebe33;
+}
+
+.mestre-espiga-div{
+  max-width: 75vw;
+  margin: auto;
+  padding: 5rem 0;
+}
+
+.mestre-pic{
+  width: 30vw;
+  opacity: 0.9;
+  border-radius: 50%;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.281);
+}
+
+.mestre-article{
+  max-width: 25vw;
+  background-color: whitesmoke;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.089);
+  padding: 2rem;
+  border-radius: 5px;
+}
+
+.mestre-espiga h2{
+  padding-bottom: 3rem;
+}
+
+.mestre-article p{
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  line-height: 1.2;
+}
+
+/**********/
+/* TURMAS */
+/**********/
+
+.turmas-div{
+  max-width: 75vw;
+  margin: auto;
+  padding: 5rem 0;
+}
+
+.turmas-div li{
+  display: flex;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.turmas-div h4{
+  font-size: 2rem;
+  padding-right: 1rem;
+}
+
+.turmas-div p{
+  font-size: 1.8rem;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  background-color: #bebebe33;
+  width: 15vw;
+  border-radius: 5px;
+  /* box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.096); */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.089);
+}
+
+.card img{
+  width: 10vw;
+  border-radius: 50%;
+  justify-items: center;
+  margin-bottom: 3.2rem;
+  border: 3px solid #344775;
 }
