--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,12 @@ a{
   margin-bottom: 3.2rem;
 }
 
+.heading-quaternary{
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
 /**************/
 /* HEADER/NAV */
 /**************/
@@ -104,7 +110,10 @@ header{
 }
 
 .logo{
-  width: 5vw
+  width: 5vw;
+  border-radius: 50%;
+  box-shadow: 0 1.2rem 3.2rem #5a5a5abe;
+
 }
 
 .nav-list{
@@ -134,7 +143,7 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5rem 0;
+  padding: 8rem 0;
 }
 
 .carrossel img{
@@ -154,7 +163,7 @@ header{
 .mestre-espiga-div{
   max-width: 75vw;
   margin: auto;
-  padding: 5rem 0;
+  padding: 8rem 0;
 }
 
 .mestre-pic{
@@ -189,7 +198,14 @@ header{
 .turmas-div{
   max-width: 75vw;
   margin: auto;
-  padding: 5rem 0;
+  padding: 8rem 0;
+}
+
+.turmas h2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 8rem;
 }
 
 .turmas-div li{
@@ -226,4 +242,34 @@ header{
   justify-items: center;
   margin-bottom: 3.2rem;
   border: 3px solid #344775;
+}
+
+/**********/
+/* Local */
+/**********/
+
+.local{
+  background-color: #bebebe33;
+}
+
+.local h2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 8rem;
+}
+
+.local-div{
+  max-width: 75vw;
+  margin: auto;
+  padding: 5rem 0;
+}
+
+.mapa{
+  justify-self: center;
+  align-self: center;
+  width: 50rem;
+  height: 50rem;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.089);
 }
