--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,7 @@ header{
   color: whitesmoke;
 }
 
-.instagram-logo{
+.instagram-nav{
   color: whitesmoke;
 }
 
@@ -273,4 +273,31 @@ header{
   height: 50rem;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.089);
+}
+
+/**********/
+/* Footer */
+/**********/
+
+footer{
+  height: auto;
+}
+
+.footer-div{
+  padding: 8rem 0;
+}
+
+.contato, .social{
+  display: flex;
+  flex-direction: column;
+}
+
+footer a {
+  display: flex;
+  font-size: 2.4rem;
+}
+
+footer p{
+  padding-left: 1rem;
+  padding-bottom: 1rem;
 }
