--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ a{
 /**************/
 
 header{
-  background-color: #344775;
+  background-color: #475e96;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.281);
 }
 
@@ -133,6 +133,7 @@ header{
 
 .nav-icon{
   color: whitesmoke;
+  font-size: 2.4rem;
 }
 
 /*************/
@@ -158,7 +159,7 @@ header{
 
 @keyframes fadeInOut {
   0% {
-    opacity: 0.5;
+    opacity: 0.6;
   }
   100% {
     opacity: 0.9;
@@ -186,7 +187,7 @@ button{
   height: 90vh;
   font-size: 4rem;
   color: #333;
-  background-color: #ffffff50;
+  background-color: #ffffff1e;
   transition: all 1s;
 }
 
@@ -277,6 +278,12 @@ button{
   border-radius: 5px;
   /* box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.096); */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.089);
+
+  transition: all 0.5s;
+}
+
+.card:hover{
+  transform: scale(1.05);
 }
 
 .card img{
@@ -338,6 +345,11 @@ footer{
 footer a {
   display: flex;
   font-size: 2.4rem;
+  transition: all 1s;
+}
+
+footer a:hover{
+  color: #5c7cfa;
 }
 
 footer p{
