--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,10 @@ a{
   padding: 8rem 0;
 }
 
+.go-back{
+  z-index: -10;
+}
+
 /**************/
 /* HEADER/NAV */
 /**************/
@@ -139,6 +143,48 @@ header{
 .nav-icon{
   color: whitesmoke;
   font-size: 2.4rem;
+}
+
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .carrossel {
+  margin-top: 9.6rem;
+}
+
+.sticky .icon-mobile-nav {
+  color: #555;
+}
+
+/* MENU */
+.btn-menu {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: whitesmoke;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+  color: #555;
 }
 
 /*************/
