--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,7 @@ a{
 header{
   background-color: #475e96;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.281);
+  position: relative;
 }
 
 .header-div{
