--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,15 @@ header{
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
 
+.sticky .nav-link, .sticky .nav-icon{
+  font-size: 1.8rem;
+  color: #777;
+}
+
+.sticky .logo{
+  width: 6rem;
+}
+
 .sticky .carrossel {
   margin-top: 9.6rem;
 }
